--- a/index.html
+++ b/index.html
@@ -12,5 +12,79 @@
 </head>
 <body>
 
+    <header>
+        <div class="container">
+            <nav class="nav">
+                <a href="index.html" class="logo-box">
+                    <img src="./images/logo.png" alt="" class="logo">
+                </a>
+    
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Servics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section class="landingPage">
+        <div class="container">
+            <div class="content">
+                <div class="contentDetails">
+                    <h1 class="title">Hello There</h1>
+                    <p class="paragraph">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum animi inventore atque odio aperiam repudiandae excepturi dolores suscipit vitae mollitia modi totam ullam nemo ipsum temporibus, impedit iure eaque dolor.
+                    </p>
+
+                    <div class="search">
+                        <input type="text" class="searchBar" placeholder="Your Email" required>
+                        <input type="button" class="searchBtn" value="Sign In">
+                    </div>
+
+                    <div class="smList">
+
+                        <a href="#" class="smLink">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#" class="smLink">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#" class="smLink">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#" class="smLink">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+
+                    </div>
+
+                </div>
+
+                <div class="imageGroup">
+                    <img src="./images/liq-5.png" alt="" class="large">
+                    <img src="./images/liq-4.png" alt="" class="bean">
+                </div>
+
+            </div>
+        </div>
+
+        <img src="./images/liq-1.png" alt="" class="blob1">
+        <img src="./images/liq-2.png" alt="" class="blob2">
+        <img src="./images/liq-3.png" alt="" class="blob3">
+        <img src="./images/liq-6.png" alt="" class="blob4">
+
+    </section>
+
+
+
+
+
 </body>
 </html>
