CSS Phase 1 Completed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="contentDetails">
                     <h1 class="title">Hello There</h1>
                     <p class="paragraph">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum animi inventore atque odio aperiam repudiandae excepturi dolores suscipit vitae mollitia modi totam ullam nemo ipsum temporibus, impedit iure eaque dolor.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum animi inventore atque odio aperiam repudiandae.
                     </p>
 
                     <div class="search">
