--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <nav class="nav">
-                <a href="index.html" class="logo-box">
+                <a href="index.html" class="logo-box hueShift">
                     <img src="./images/logo.png" alt="" class="logo">
                 </a>
     
@@ -39,13 +39,13 @@
             <div class="content">
                 <div class="contentDetails">
                     <h1 class="title">Hello There</h1>
-                    <p class="paragraph">
+                    <p class="description">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum animi inventore atque odio aperiam repudiandae.
                     </p>
 
                     <div class="search">
                         <input type="text" class="searchBar" placeholder="Your Email" required>
-                        <input type="button" class="searchBtn" value="Sign In">
+                        <input type="button" class="searchBtn hueShift" value="Sign In">
                     </div>
 
                     <div class="smList">
@@ -67,18 +67,18 @@
 
                 </div>
 
-                <div class="imageGroup">
-                    <img src="./images/liq-5.png" alt="" class="large">
+                <div class="imageGroup hueShift">
+                    <img src="./images/liq-5.png" alt="" class="large ">
                     <img src="./images/liq-4.png" alt="" class="bean">
                 </div>
 
             </div>
         </div>
 
-        <img src="./images/liq-1.png" alt="" class="blob1">
-        <img src="./images/liq-2.png" alt="" class="blob2">
-        <img src="./images/liq-3.png" alt="" class="blob3">
-        <img src="./images/liq-6.png" alt="" class="blob4">
+        <img src="./images/liq-1.png" alt="" class="blob blob1 hueShift">
+        <img src="./images/liq-2.png" alt="" class="blob blob2 hueShift">
+        <img src="./images/liq-3.png" alt="" class="blob blob3 hueShift">
+        <img src="./images/liq-6.png" alt="" class="blob blob4 hueShift">
 
     </section>
 
