Project Updated | Crypto Page

--- a/index.html
+++ b/index.html
@@ -1,46 +1,58 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Miro</title>
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <header>
+
         <div class="container">
+
             <nav class="nav">
+
                 <a href="index.html" class="logo-box hueShift">
                     <img src="./images/logo.png" alt="" class="logo">
                 </a>
-    
+
                 <ul class="nav-list">
+
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
+                        <a href="#" class="nav-link">Get Started</a>
                     </li>
+
                     <li class="nav-item">
                         <a href="#" class="nav-link">Servics</a>
                     </li>
+
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="#" class="nav-link">Support</a>
                     </li>
+
                 </ul>
+
             </nav>
+
         </div>
+
     </header>
 
     <section class="landingPage">
         <div class="container">
             <div class="content">
                 <div class="contentDetails">
-                    <h1 class="title">Hello There</h1>
+                    <h1 class="title">‘Anything to Anything’</h1>
                     <p class="description">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum animi inventore atque odio aperiam repudiandae.
+                        Trade between cryptocurrencies, precious metals, U.S. equities* and national currencies in one easy step
                     </p>
 
                     <div class="search">
@@ -67,9 +79,11 @@
 
                 </div>
 
-                <div class="imageGroup hueShift">
-                    <img src="./images/liq-5.png" alt="" class="large ">
-                    <img src="./images/liq-4.png" alt="" class="bean">
+                <div class="imageGroup">
+                    <img src="./images/Eth.png" alt="" class="large">
+                    <img src="./images/XRP-Left.png" alt="" class="xrp">
+                    <img src="./images/chainlink-right.png" alt="" class="chain">
+                    <img src="./images/bitcoin-right.png" alt="" class="bitcoin">
                 </div>
 
             </div>
@@ -87,4 +101,5 @@
 
 
 </body>
+
 </html>
